`modified git ignore

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,20 @@
 				<warSourceDirectory>WebContent</warSourceDirectory>
 			</configuration>
 		</plugin>
+		<plugin>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-maven-plugin</artifactId>
+	<executions>
+		<execution>
+			<goals>
+				<goal>repackage</goal>
+			</goals>
+			<configuration>
+				<finalName>spring-boot-demo</finalName>
+			</configuration>
+		</execution>
+	</executions>
+</plugin>
 	</plugins>
 </build>
 </project>
