--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ server.port: 8761
 #server.port: 443
 
 #DataSource
-spring.datasource.url=jdbc:mysql://192.168.0.17:3306/qlana
-spring.datasource.username=admin
-spring.datasource.password=The@1234
+#spring.datasource.url=jdbc:mysql://192.168.0.17:3306/qlana
+#spring.datasource.username=admin
+#spring.datasource.password=The@1234
 
 #QuartZ Properties
 #org.quartz.scheduler.instanceId:AUTO
@@ -38,14 +38,14 @@ spring.datasource.password=The@1234
 #org.quartz.jobStore.misfireThreshold:60000
 #org.quartz.jobStore.class:org.quartz.simpl.RAMJobStore
 
-
+#MYSQL_PASSWORD:
 
 #SSL(HTTPS)
-server.ssl.key-store: demo.p12
-server.ssl.key-store-password: 123123
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: demo
-security.require-ssl=true
+#server.ssl.key-store: demo.p12
+#server.ssl.key-store-password: 123123
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: demo
+#security.require-ssl=true
 
 #eureka config
 #eureka.client.registerWithEureka = false
